# tensorpow

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
tensorpow/: __init__.py  core.py  file_handler.py  sl2_loader.py
tensorpow/_data/: piM_sym_10_T_sparse.npz  piM_sym_10_exps.npz  piM_sym_11_T_sparse.npz  piM_sym_11_exps.npz  piM_sym_12_T_sparse.npz  piM_sym_12_exps.npz  piM_sym_13_T_sparse.npz  piM_sym_13_exps.npz  piM_sym_14_T_sparse.npz  piM_sym_14_exps.npz  piM_sym_15_T_sparse.npz  piM_sym_15_exps.npz  piM_sym_16_T_sparse.npz  piM_sym_16_exps.npz  piM_sym_17_exps.npz  piM_sym_1_T_sparse.npz  piM_sym_1_exps.npz  piM_sym_2_T_sparse.npz  piM_sym_2_exps.npz  piM_sym_3_T_sparse.npz  piM_sym_3_exps.npz  piM_sym_4_T_sparse.npz  piM_sym_4_exps.npz  piM_sym_5_T_sparse.npz  piM_sym_5_exps.npz  piM_sym_6_T_sparse.npz  piM_sym_6_exps.npz  piM_sym_7_T_sparse.npz  piM_sym_7_exps.npz  piM_sym_8_T_sparse.npz  piM_sym_8_exps.npz  piM_sym_9_T_sparse.npz  piM_sym_9_exps.npz
tests/: test_core.py
