[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorpow"
dynamic = ["version"]
description = "Norms and block decompositions for 2x2 and 3x3 tensor powers."
readme = "README.md"
requires-python = ">=3.11,<4"
authors = [
    {name = "Martin Juhász", email = "martin.juhasz11@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "pulp",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/juhaszmartin/tensorpow"
Repository = "https://github.com/juhaszmartin/tensorpow"
Issues = "https://github.com/juhaszmartin/tensorpow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorpow*"]

[tool.setuptools.package-data]
tensorpow = ["_data/*.npz", "_data/sl2reps.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]